<resources>
    <string name="app_name">UpaxApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leonel Pacheco</string>
    <string name="nav_header_subtitle">Upax App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="btn_guardar">Guardar</string>

    <string name="menu_imagestore">Imagen Firebase</string>
    <string name="menu_dataempleado">Formulario empleado</string>
    <string name="menu_ubicacionempleado">Negocios</string>

    <!--row_empleado-->
    <string name="itemuser_txt_empleado">#567100</string>
    <string name="itemuser_txt_telefono">Telefono</string>
    <string name="itemuser_txt_email">Email</string>
    <string name="itemuser_txt_direccion">Dirección</string>
    <string name="formulario_etxt_empleado">Empleado</string>

    <!--row_ubicacion-->
    <string name="rowubicacion_txt_calle">C. 26</string>
    <string name="rowubicacion_txt_exterior">199</string>
    <string name="rowubicacion_txt_interior">916</string>
    <string name="rowubicacion_txt_codigopostal">CP 97133</string>
    <string name="rowubicacion_txt_colonia">COL. Altabrisa</string>
    <string name="rowubicacion_txt_municipio">Mérida</string>
    <string name="rowubicacion_txt_estado">Yucatán</string>
    <string name="rowubicacion_txt_pais">México</string>
    <string name="rowubicacion_btn_verubicacion">Ver Ubicación</string>
    <string name="rowubicacion_txt_cp">C.P</string>

    <!--fragment_data_negocio-->

    <string name="datanegocio_txt_nombre"></string>
    <string name="datanegocio_txt_idcomercio"></string>
    <string name="datanegocio_txt_email"></string>
    <string name="datanegocio_txt_telefono"></string>

</resources>