<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_middle">

            <ImageView
                android:id="@+id/imagennegocio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
                tools:srcCompat="@drawable/person" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagennegocio"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_verubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/rowubicacion_btn_verubicacion"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_estado" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/txt_exterior"
                    app:layout_constraintTop_toTopOf="@+id/txt_exterior" />

                <TextView
                    android:id="@+id/txt_direccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rowubicacion_txt_calle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_colonia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rowubicacion_txt_colonia"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_direccion" />

                <TextView
                    android:id="@+id/txt_exterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/rowubicacion_txt_exterior"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/txt_direccion"
                    app:layout_constraintTop_toTopOf="@+id/txt_direccion" />

                <TextView
                    android:id="@+id/txt_interior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rowubicacion_txt_interior"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rowubicacion_txt_cp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_municipio" />

                <TextView
                    android:id="@+id/txt_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/rowubicacion_txt_codigopostal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <TextView
                    android:id="@+id/txt_municipio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rowubicacion_txt_municipio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_colonia" />

                <TextView
                    android:id="@+id/txt_estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/rowubicacion_txt_estado"
                    app:layout_constraintStart_toEndOf="@+id/txt_municipio"
                    app:layout_constraintTop_toTopOf="@+id/txt_municipio" />

                <TextView
                    android:id="@+id/txt_pais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/rowubicacion_txt_pais"
                    app:layout_constraintStart_toEndOf="@+id/txt_estado"
                    app:layout_constraintTop_toTopOf="@+id/txt_estado" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>